Add /song API endpoint
